[package]
name = "rust_build"
version = "0.1.0"
authors = ["sun"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.0", features = ["serde"] }
dirs = "3.0.1"
# git2 = "0.13.12"
# cmd_lib = "0.8.5"
mongodb = "1.1.1"
bson = "1.1.0"
chrono = "0.4.19"
uuid = { version = "0.8", features = ["serde", "v4"] }
log = "0.4"
log4rs = "0.13.0"
quick-xml = "0.20.0"

# zip需要固定flate2版本
flate2 = "1.0.14"

actix-web = "3"

tokio = { version = "0.2", features = ["full"] }

reqwest = { version = "0.10", features = ["json"] }
zip = { version = "0.5" }

actix-rt = "1.1.1"

async-trait = "0.1.42"


[dev-dependencies]
actix-rt = "1.1.1"
