[package]
name = "rust_build"
version = "0.3.2"
authors = ["sun"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.0", features = ["serde"] }
# dirs = "3.0.1"
# git2 = "0.13.12"
# cmd_lib = "0.8.5"
mongodb = "2.0.0-alpha"
bson = "1.1.0"
chrono = "0.4.19"
uuid = { version = "0.8", features = ["serde", "v4"] }
log = "0.4"
log4rs = "0.13.0"
quick-xml = "0.20.0"

# zip需要固定flate2版本
flate2 = "1.0.14"

actix-web = "3"

# 因request 只支持 0.2
# tokio = { version = "0.2", features = ["full"] }

tokio = { version = "1.1", default-features = false, features = [
    "net",
    "time",
    "rt-multi-thread",
    "fs",
    "macros",
] }

reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "stream",
    "multipart",
    "rustls-tls",
] }
zip = { version = "0.5", features = ["bzip2"] }

async-trait = "0.1.42"

tokio-util = { version = "0.6", features = ["codec"] }
tokio-stream = "0.1.2"

once_cell = "1.5.2"

regex = "1.4.2"

redis = { version = "0.19.0", features = ["tokio-comp", "connection-manager"] }

structopt = "0.3"
whoami = "0.9"
java-properties = "1.3.0"


[dev-dependencies]
actix-rt = "2.0.0"
thread-id = "3.3.0"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
# debug = 0

[profile.dev.package]
# This speeds up `cargo xtask dist`.

[profile.release]
incremental = true
debug = 0 # Set this to 1 or 2 to get more useful backtraces in debugger.
opt-level = 'z'
